public/style.css
/* ... */
.btn_link:hover{
    color: #000;
    text-decoration: none;
    font-weight: bold;
}

.top-right {
    position: absolute;
    top: 20px;
    right: 0;
    transition: .8s ease;
    opacity: 0;
    text-align: center;
}

/* for talent image hover text */
.top-right-fix{
    top:10px;
    /* font-size: xx-small; */
}

.image_text:hover .top-right {
    opacity: 1;
}
.image_text {
    position: relative;
    text-align: center;
    color:black;  
    /* margin-left: 20px; */
}
.top-right button, .top-right h4{
    display: block;
    margin-top: -10px;
    padding: 0 10px;
    text-transform: uppercase;
    display: block;
    width: 100%;
    text-align: right;
    font-family: helvetica-neue-light;
    font-style: italic;
}
.top-right a,.top-right h4{
    color: #000;
   text-decoration: none;
   font-size:10px;
}
.top-right button a:focus,.top-right button:focus{
    outline: unset;
    text-decoration: none;
}
.top-right a:hover{
    text-decoration: none;
    color: #000 !important;
}

 
/* for requested to be shown down */
.top-right h4{
    margin-top: 10px;
}
/* for button height decreasement */
.top-right button{
    line-height: 10px;
    padding: 7px;
    padding-bottom: 8.2px;
    padding-top: 4.8px;
    padding-right: 9.2px;
    /* position: relative; */
}

 .hidden{
     visibility: hidden;
 }

 .dropdown {
    position: relative;
    display: inline-block;

    
  }
  
  .dropdown-content {
    position: absolute;
    opacity: 0;
    z-index: 1;
    transition: all ease-in-out 0.5s;

  }
  .dropdown:hover .dropdown-content{
      opacity: 1;
  }
  .dropdown-content a {
    color: black;
    font-size: 1.4rem;
    text-decoration: none;
    /* font-weight: bold; */
   
  }


  .dropdown-content a:hover {
      
     /* font-weight: bold; */
    text-decoration: none;
    /* font-weight: 100; */
    /* font-style: normal; */
}
  
  
.dropdown:hover .dropdown-content {
    display:block;
}

.mr{
    margin-left: -40px;
    margin-top: 0.5rem;
}
.clr{
      font-size: 50px;
      color: brown;
  }
.pleft table tr{
      font-size: 16px;
      padding: 0 5px;
  }
.pleft table td{
    padding: 0.8rem;
    font-weight: bold;
    text-align: left;
 }
.pleft{
    padding-left: 3.2rem;
    text-align: center;
}
.pleft table th{
    text-align: right;
    font-weight: normal;
}
.pleft h3{
    font-size: 30px;
    font-style: italic;
    font-weight: 100;
}
.pdf_btn{
    margin-top: 1rem;
    margin-left: 10rem;
    padding: 5px;
    width: 100px;
    margin: 0 auto;
}
.pdf_btn i{
    font-size: 35px;
    padding: 0 !important;
}
.pdf_btn a{
    font-size: 16px;
    color: #3a3a3a ;
}
.pdf_btn a:hover{
    text-decoration: none;
}
.pdf_btn button a{
    color: black;
    text-decoration: none;
}

.pdf_btn i{
    display: block;
    padding-left: 2.4rem;
}

.detail_btn{
    /* margin-top: 5rem;
    margin-left: 20px */
}

.detail_btn label {
    padding-right: 4rem;
    font-size: 1.5rem;
    color: black;
    text-decoration: none;
    font-weight: 500;
    cursor: pointer;
}
.detail_btn label.active{
    font-weight: bold;
}
.editpageImage{
  
        height: 40px;
        width: 30px;
    
}

/* 
@media screen and (min-width: 1101px) {
    .view-packages {
        top: 265px;
        position: absolute;
        margin-left: 20px;
        font-style: italic;
        cursor: pointer;
    }
    
    .deselect-all {
        top: 295px;
        position: absolute;
        margin-left: 20px;
        font-style: italic;
        cursor: pointer;
    }
} */

/* 
@media screen and (max-width: 1100px) {
    .view-packages {
        
        margin-left: 20px;
        font-style: italic;
        cursor: pointer;
    }

    .deselect-all {
       
        margin-left: 20px;
        font-style: italic;
        cursor: pointer;
    }

    .side-labels {
        text-align: center;
        margin-top: 35px;
    }

    

} */
.slick-next {
    right: 50px !important;
}
.slick-prev {
    left: -45% !important;
}
.slick-prev:before, .slick-next:before {
    content: '<' !important;
    font-size: 30px !important;
    line-height: 1;
    opacity: .75;
    color: #230000 !important;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
.slick-next:before{
    content: '>' !important;
}
/* .slick-prev, .slick-next { */
    /* font-size: 0;
    line-height: 0;
    position: absolute;
    top: 50%;
    display: block;
    width: 20px;
    height: 20px;
    padding: 0;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    cursor: pointer;
    border: none; */

    /* font-size: 0;
    line-height: 0;
    position: absolute;
    top: 50%;
    display: block;
    width: 20px;
    height: 20px;
    padding: 0;
    transform: translate(0, -50%);
    cursor: pointer;
    color: #6b0000;
    border: none;
    background: #880101 !important; */
   
/* }  */

.slider-image-wrapper
{
    height: 400px;
    width: 400px;
    text-align: center;
    vertical-align: middle;
    position: relative;
}
.slider-image 
{
    max-height: 98%;
    max-width: 98%;
    display: block;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}
.btn_link{
    font-size: 22px;
    font-weight: 100
}
.active .btn_link{
    font-weight: bolder;
}
.dropdown button{
    padding: 0 15px;
}
nav li.active a,.dropdown-content .active a{
    font-weight: bold;
}

.modal {
    text-align: center;
    padding: 0!important;
  }
  .modal:before {
    content: '';
    display: inline-block;
    height: 100%;
    vertical-align: middle;
    margin-right: -4px;
  }
  .modal-dialog {
    display: inline-block;
    text-align: left;
    vertical-align: middle;

  }
  
.modal .modal-content{
    border-radius: 0;
    box-shadow: none;
    text-align: center;
    width: 100%;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    width: 150%;
    margin-left: -25%;
    
}
/* ... */

